Button、DeleteView、Jump、Label、Scamera、Move、Picture is now editable in Halation

--- a/Lyyneheym/YuriHalation/MainWindow.xaml
+++ b/Lyyneheym/YuriHalation/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="YuriHalation.MainWindow"
+﻿<Window x:Class="Yuri.YuriHalation.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525" WindowState="Minimized" Opacity="0">
