--- a/Lyyneheym/YuriHalation/App.xaml
+++ b/Lyyneheym/YuriHalation/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="YuriHalation.App"
+﻿<Application x:Class="Yuri.YuriHalation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
