--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -87,12 +87,12 @@
         <TextBlock Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" Text="Saved" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
 
         <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48"/>
-            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48"/>
+            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
-            <Image Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48"/>
-            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48"/>
-            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Menu.png" Opacity="0.4" Height="48" Width="48" MouseLeftButtonUp="Image_MouseLeftButtonUp_MenuBtn"/>
+            <Image Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image Source="/Hemerocallis;component/Assets/UI_Btn_Menu.png" Opacity="0.4" Height="48" Width="48" MouseLeftButtonUp="Image_MouseLeftButtonUp_MenuBtn" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
         </StackPanel>
 
         <TextBlock Grid.Column="1" Grid.Row="0" Foreground="LightSteelBlue" Text="Chapter 2 - 恋恋不舍" FontSize="22" Padding="50,8,0,0" TextAlignment="Left" IsHitTestVisible="False">
